// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render page slot 1`] = `
<ul class="ghb-pagination">
  <li class="ghb-pagination__item ghb-pagination__prev ghb-hairline">上一页</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">1</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">2</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">3</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">4</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">5</li>
  <li class="ghb-pagination__item ghb-pagination__next ghb-hairline">下一页</li>
</ul>
`;

exports[`render prev-text & next-text slot 1`] = `
<ul class="ghb-pagination">
  <li class="ghb-pagination__item ghb-pagination__prev ghb-hairline">Custom PrevText</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">1</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">2</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">3</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">4</li>
  <li class="ghb-pagination__item ghb-pagination__page ghb-hairline">5</li>
  <li class="ghb-pagination__item ghb-pagination__next ghb-hairline">Custom NextText</li>
</ul>
`;
